--- a/app/views/MainWindow.xml
+++ b/app/views/MainWindow.xml
@@ -1,5 +1,5 @@
 <Alloy>
-	<Window id="root" exitOnClose="true" barColor="#cbc7c6" titleid="all_recipes">
+	<Window id="root" exitOnClose="true" barColor="#cbc7c6" titleid="allrecipes">
 		<LeftNavButton>
 			<Button backgroundImage="/images/bar/menu_btn.png" width="44" height="44" onClick="toggleLeft"/>
 		</LeftNavButton>
