splashes and app icons

--- a/platform/android/res/values/theme_my.xml
+++ b/platform/android/res/values/theme_my.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="MyTheme" parent="@style/Theme.AppCompat.Light">
-    	<!--<item name="android:windowBackground">@drawable/splash</item>-->
+    	<item name="android:windowBackground">@drawable/splash</item>
     	<item name="android:windowNoTitle">true</item>
     </style>  
     
